--- a/script.qmd
+++ b/script.qmd
@@ -1,7 +1,17 @@
 ---
 title: "What do the Dutch news say about farming communities?"
 subtitle: "A Topic Modeling Approach using R"
-author: "Claudiu Forgaci"
+author: 
+  - name: Claudiu Forgaci
+    correspondence: "yes"
+    email: C.Forgaci@tudelft.nl
+    orcid: 0000-0003-3218-5102
+    affiliations: 
+      - ref: tud
+affiliations:
+  - id: tud
+    name: Delft University of Technology
+    address: Julianalaan 134, 2628 BL, Delft, Zuid-Holland, The Netherlands
 date: "20 March 2024"
 format: html
 toc: true
@@ -14,6 +24,9 @@ include-in-header:
       }
       </style>
 bibliography: references.bib
+citation:
+  type: report
+  publisher: TU Delft
 ---
 
 ::: callout-note
