--- a/script.qmd
+++ b/script.qmd
@@ -47,11 +47,13 @@ In this workshop, we will work in a computational notebook, an environment that 
 
 4.  For our analysis, we will need to load a number of R packages that extend the out-of-the-box functionality of R. Run the `setup` code chunk below by pressing on the green arrow in its upper right corner.
 
--   If you are running this script in RStudio Desktop, you will need to first run the `install` code below, by deleting the two `#` signs and running the code chunk. It will take a few of minutes until all packages are installed.
+-   If you are running this script in RStudio Desktop, you will need to first run the `install` code below, by deleting the four `#` signs and running the code chunk. It will take a few of minutes until all packages are installed.
 
 ```{r install, eval=FALSE}
 # if (!"renv" %in% installed.packages()) install.packages("renv")
 # renv::restore(prompt = FALSE)
+# virtualenv_create(envname = "myenv", python = install_python())
+# py_install("PyMuPDF == 1.21.0", envname = "myenv")
 ```
 
 -   Run this code to load the packages we will use in this document
@@ -131,9 +133,7 @@ find . -name '*.pdf' -exec ocrmypdf --force-ocr --language nld --clean '{}' '{}'
 3.  Extract text from PDF with the following script. This sets up and calls the Python package PyMuPDF.
 
 ```{r extract-text-from-pdf, message=FALSE}
-# Set up Python for PDF text extraction
-virtualenv_create(envname = "myenv", python = install_python())
-py_install("PyMuPDF == 1.21.0", envname = "myenv")
+# Use Python for PDF text extraction
 use_virtualenv("myenv")
 source_python("extract-text-from-pdf.py")
 
