Update setup instructions

--- a/script.qmd
+++ b/script.qmd
@@ -45,9 +45,9 @@ In this workshop, we will work in a computational notebook, an environment that 
 
 ![](fig/rstudio.png)
 
-4.  For our analysis, we will need to load a number of R packages that extend the out-of-the-box functionality of R. First, run the `install` code chunk below by pressing on the green arrow in its upper right corner.
+4.  For our analysis, we will need to load a number of R packages that extend the out-of-the-box functionality of R, as follows: 
 
--   If you are running this script in RStudio Desktop, you will need to first delete the three `#` signs before running the `install` code chunk. It will take a few of minutes until all packages are installed. In RStudio Server, run the code as it is.
+-   First, run the `install` code chunk below by pressing on the green arrow in its upper right corner. If you are running this script in RStudio Desktop, you will need to first delete the three `#` signs before running the `install` code chunk. It will take a few of minutes until all packages are installed. In RStudio Server, run the code as it is.
 
 ```{r install, eval=FALSE}
 # if (!"renv" %in% installed.packages()) install.packages("renv")
@@ -56,7 +56,7 @@ In this workshop, we will work in a computational notebook, an environment that 
 # py_install("PyMuPDF == 1.21.0", envname = "myenv")
 ```
 
--   Run this code to load the packages we will use in this document
+-   Then run this code to load the packages.
 
 ```{r setup, message=FALSE}
 renv::deactivate()
