--- a/script.qmd
+++ b/script.qmd
@@ -321,17 +321,8 @@ json <- createJSON(
 LDAvis::serVis(json)
 ```
 
-## Now it's your turn!
-
-### Exercise 1: Tweaking the parameters of the topic model
-
-First, try tweaking the parameters used in this report, by changing the value of `k` (number of topics) on line 222 and `n_words` (number of words to be included in pseudonaming the topics) on line 233. Then paste the newly generated prompt into ChatGPT. Does the answer make sense? If needed continue the conversation with ChatGPT to refine its answers.
-
-Note: whenever you make a change in this document, you need to run all code chunks in this document in sequence, from top to bottom.
-
-### Exercise 2: Working with your data
-
-Now, if the methods and workflows are clear, you are ready to run the document on your data. You do that as follows:
+## Now it's your turn!  
+Now you are ready to run the document on your own data. You do that as follows:
 
 1.  Update the value of `data_choice` from `"nrc"` to `"mydata"`
 
@@ -339,6 +330,13 @@ Now, if the methods and workflows are clear, you are ready to run the document o
 
 3.  Create a zip archive of those PDF files.
 
-4.  In the files tab of RStudio, click on upload. Navigate to the target directory `~/mint2324Q3U/data/mydata`, click on `Choose File` to select the zipped archive you created and click on `OK`.
+4.  In the `Files` tab of RStudio, click on `Upload`. Navigate to the target directory `~/mint2324Q3U/data/mydata`, click on `Choose File` to select the zipped archive you created and click on `OK`.
 
-5.  Run the code chunks in this document from top to bottom to see the results of your analysis.
+5.  Run the code chunks from top to bottom (the order matters). Look at the overall word cloud and spot words that do not add meaning. Add those to the custom stop words and rerun the code chunks. Iterate until the overall wordcloud only shows meaningful words.
+
+5.  Tweak the topic model parameters by changing the value of `k` (number of topics) on line 222 and `n_words` (number of words to be included in pseudo-naming the topics) on line 233.
+
+6.  Paste the newly generated prompt into ChatGPT. Does the answer make sense? If needed continue the conversation with ChatGPT to refine its answers. Rename the topic names on lines 294-298 with the answers you got from ChatGPT.
+
+Note that every time you make a change, you need to run the code chunks in this document from top to bottom to see the updated results. When you are satisfied with the results, render the document to see the final html output.
+
