--- a/slides.qmd
+++ b/slides.qmd
@@ -10,7 +10,7 @@ format:
     slide-number: c/t
     # logo: fig/rbanism-logo.png
     css: style.css
-footer: "Topic Modeling with R"
+footer: "Web Scraping & Topic Modeling with R"
 ---
 
 ## Workshop outline {.smaller}
@@ -57,25 +57,34 @@ Quantitative analysis:<br>Topic modeling
 
 ## Quantitative analysis
 
-::: incremental
-<b>Pros</b>:
+<b>Why?</b>:
 
 -   Reproducible - re-run the analysis with the same results
 -   Automated - run the analysis on other data
 -   Scalable - run the analysis on (much) more data
 
-<b>Cons</b>:
+<b>Good to know:</b>:
 
--   Requires knowledge of statistics
+-   Requires (some) knowledge of statistics
 -   Results depend on the amount and quality of data available
-:::
 
 ## The method
 
-Topic modeling using LDA as a way to reveal latent topics inunstructured text data.
+Topic modeling using Latent Dirichlet Allocation (LDA) is a method used to reveal latent topics in unstructured text data. 
 
--   documents are a mixture of topics
--   topics are a mixture of words
+::: {.columns}
+::: {.column width="65%"}
+![](fig/lda.png)
+:::
+::: {.column width="35%"}
+In an LDA model: 
+
+- documents are a mixture of topics
+- topics are a mixture of words
+:::
+:::
+
+
 
 # Go to [edu.nl/ph3a6](https://edu.nl/ph3a6) {background-color="#00A6D6"}
 
