--- a/script.qmd
+++ b/script.qmd
@@ -30,7 +30,7 @@ citation:
 ---
 
 ::: callout-note
-In this workshop, we will work in a computational notebook, an environment that combines narrative, executable code and output in one place. The document you are reading is a Quarto document that combines [Markdown](https://www.markdowntutorial.com/), a markup language with a simple syntax for text formatting, with code chunks written in the R programming language. If you are reading the source document `script.qmd` and want to see a rendered version of it, click on the Render button above this window or visit <https://cforgaci.github.io/mint2324Q3U/script.html>.
+In this workshop, we work in a computational notebook, an environment that combines narrative, executable code and output in one place. The document you are reading is a Quarto document that combines [Markdown](https://www.markdowntutorial.com/), a markup language with a simple syntax for text formatting, with code chunks written in the R programming language. If you are reading the source document `script.qmd` and want to see a rendered version of it, click on the Render button above this window or visit <https://cforgaci.github.io/mint2324Q3U/script.html>.
 :::
 
 ## Setup
