--- a/slides.qmd
+++ b/slides.qmd
@@ -23,7 +23,7 @@ footer: "Web Scraping & Topic Modeling with R"
 2. Tutorial: Finding topics in Dutch news (Claudiu) - 1 hour
 3. Exercises: Visualising scraped data & topic modeling with your own data - 1 hour
 
-# Go to [edu.nl/ph3a6](https://edu.nl/ph3a6) {background-color="#00A6D6"}
+# Go to [edu.nl/ph3a6](https://edu.nl/ph3a6){target="_blank"} {background-color="#00A6D6"}
 
 And log in to RStudio Server with:
 
